--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -2,10 +2,9 @@
   display: grid;
   grid-template-rows: min-content min-content auto;
   grid-template-areas: 
-  "nova-tarefa"
+  "new-task"
   "cronometro"
-  "tarefas"
-  ;
+  "tasks";
   row-gap: 24px;
   min-width: 320px;
   min-height: calc(100vh - 32px);
@@ -17,8 +16,8 @@
 
   @media screen and (min-width:1280px)  {
     grid-template-areas: 
-    "nova-tarefa tarefas"
-    "cronometro tarefas"
+    "new-task tasks"
+    "cronometro tasks"
     ;
     column-gap: 64px;
     grid-template-rows: min-content min-content;
