--- a/src/pages/App.module.scss
+++ b/src/pages/App.module.scss
@@ -3,7 +3,7 @@
   grid-template-rows: min-content min-content auto;
   grid-template-areas: 
   "new-task"
-  "cronometro"
+  "timer"
   "tasks";
   row-gap: 24px;
   min-width: 320px;
@@ -17,7 +17,7 @@
   @media screen and (min-width:1280px)  {
     grid-template-areas: 
     "new-task tasks"
-    "cronometro tasks"
+    "timer tasks"
     ;
     column-gap: 64px;
     grid-template-rows: min-content min-content;
